# nixrs

./: .gitignore  Cargo.toml  README.md  flake.nix
example/: Cargo.toml
example/src/: main.rs
nixrs/: Cargo.toml
nixrs-sys/: Cargo.toml  build.rs  wrapper.h
nixrs/examples/: eval.rs
nixrs/src/: context.rs  lib.rs  main.rs  path.rs  state.rs  store.rs  utils.rs  value.rs
