[package]
name = "nixrs"

description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
libc = "0.2.155"
nixrs-sys = { version = "0.1.0", path = "../nixrs-sys" }
thiserror = "1.0.63"
